# order_flow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: download_databento_sample.py  visualize_footprint.py
src/footprint/: __init__.py  _config.py  _exceptions.py  _version.py  pipeline.py
src/footprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/footprint/dataset/: __init__.py  _augment.py  _factory.py  _weighter.py  _window.py
src/footprint/engine/: __init__.py  _bucket.py  _footprint.py  _normalizer.py  _pipeline.py  _price_grid.py
src/footprint/io/: __init__.py  _parquet_reader.py  _schema.py  _synthetic.py  _validator.py
tests/: conftest.py  test_config.py  test_integration.py
tests/dataset/: test_augment.py  test_factory.py  test_weighter.py  test_window.py
tests/engine/: test_bucket.py  test_footprint.py  test_normalizer.py  test_pipeline.py  test_price_grid.py
tests/io/: test_parquet_reader.py  test_synthetic.py  test_validator.py
