[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "footprint"
version = "0.1.0"
description = "Footprint chart tensor construction for order-flow analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=14",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
    "hypothesis>=6",
]

[project.scripts]
footprint-build = "footprint.pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
filterwarnings = ["error"]
